fix cases visibility on the first screen

--- a/styles/cases.css
+++ b/styles/cases.css
@@ -6,7 +6,7 @@
     max-width: 1400px;
     min-height: min-content;
     height: 700px;
-    max-height: 80dvh;
+    /* max-height: 80dvh; */
     box-sizing: border-box;
     border-radius: 32px;
     padding: 16px;
@@ -155,7 +155,7 @@
 
 .cases__name {
     grid-area: name;
-    margin: 4px 0 8px;
+    margin: 0.2em 0 0.3em;
     font-size: clamp(20px, 3vw, 32px);
     font-size: calc(var(--fz) * 1.4);
     font-weight: 400;
