--- a/styles/mainPage.css
+++ b/styles/mainPage.css
@@ -6,7 +6,7 @@
 }
 
 .main__hero {
-    height: 100dvh;
+    height: 90dvh;
 }
 
 .main__section {
